# mp4-parser

./: .gitignore  Cargo.toml  ReadMe.md
examples/: Cargo.toml
examples/simple/: main.rs
examples/tui/: main.rs
examples/tui/app/: mod.rs
mp4-macros/: Cargo.toml  ReadMe.md
mp4-macros/src/: atom_print.rs  errors.rs  extract.rs  lib.rs
mp4-parser/: Cargo.toml  ReadMe.md
mp4-parser/src/: header.rs  lib.rs
mp4-parser/src/atoms/: ftyp.rs  mdat.rs  mod.rs  moov.rs  undef.rs
mp4-parser/src/atoms/moov/: mod.rs  mvhd.rs
mp4-parser/src/atoms/moov/trak/: edts.rs  mod.rs  tkhd.rs
mp4-parser/src/atoms/moov/trak/mdia/: elng.rs  hdlr.rs  mdhd.rs  mod.rs
mp4-parser/src/atoms/moov/trak/mdia/minf/: mod.rs  smhd.rs  vmhd.rs
mp4-parser/src/atoms/moov/trak/mdia/minf/dinf/: dref.rs  mod.rs
mp4-parser/src/utils/: helper.rs  mod.rs  name.rs  values.rs
